--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
     "css-loader": "^5.2.4",
+    "customize-cra": "^1.0.0",
     "eslint": "^7.25.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.23.2",
@@ -42,6 +44,7 @@
   },
   "homepage": "https://github.com/wangyong315/react-falsework#readme",
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "antd": "^4.15.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
